2006-09-19  Florian Boor  <florian@kernelconcepts.de>

	* contacts-db.c: Add more documentation.

2006-08-04  Florian Boor  <florian@kernelconcepts.de>

	* Release version 0.5
	* contacts-db.c: Add some documentation.
	  Fix SQL statements and typo.

2006-07-04  Florian Boor  <florian@kernelconcepts.de>

	* Release version 0.4.
	* configure.ac, Makefile.am, doc/*: Add documentation framework 
	  and some basic information about libcontactsdb.
	* Fix licensing information and include license file.

2006-02-03  Florian Boor  <florian@kernelconcepts.de>

    * contact-db.c: Some formation improvements in various functions.
    (contacts_db_get_entries), (contacts_db_get_entries_list), 
    (contacts_db_get_entries_list): Select company field to become displayed 
    if name is empty.
    (contacts_db_get_entries_list), (contacts_db_get_entries_filtered), 
    (contacts_db_get_entries_list_filtered): Fix SQL code to return entries 
    starting with search pattern only. Fix wrong SQL format string.
    

2006-01-14  Phil Blundell  <pb@reciva.com>

	* Version 0.3 released.

2006-01-14  Phil Blundell  <pb@reciva.com>

	* old-db.c: New file, copied from gpe-contacts.
	* Makefile.am (libcontactsdb_la_SOURCES): Add it.

	* contacts-db.c (migrate_old_categories): Rename prototype to...
	(contacts_db_migrate_old_categories): ... this.
	* contacts-db.c (contacts_db_open): Adjust call to above function.

2006-01-14  Phil Blundell  <pb@reciva.com>

	* Version 0.2 released.

2006-01-14  Phil Blundell  <pb@reciva.com>

	* contacts-db.c: Reindent.

2006-01-14  Phil Blundell  <pb@reciva.com>

	* gpe/contacts-db.h (contacts_db_close): New prototype.
	(db_open): Deleted.
	* contacts-db.c (contacts_db_close): New function.

2005-12-31  Florian Boor  <florian@kernelconcepts.de>

    * Release version 0.1.
    * Makefile.am: Include GPE specific stuff.
    * gpe-tp.am, gpe-dist.am: New files.
    * contacts-db.c: Remove unused code.

2005-12-05  Pat Deegan  <linuxipaq@psychogenic.com>
